--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/btn_nav_home"
         android:title="Home"
-        android:icon="@drawable/item_games_design"/>
+        android:icon="@drawable/baseline_videogame_asset_24"/>
     <item android:id="@+id/btn_nav_library"
-        android:title="Library"/>
+        android:title="Library"
+        android:icon="@drawable/baseline_library_books_24"/>
 </menu>
