--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_item">#7053BF</color>
-    <color name="dark_background">#13022B</color>
+    <color name="item_color">#232832</color>
+    <color name="dark_background">#28384b</color>
+
     <color name="center_color">#021639</color>
     <color name="end_color">#052C70</color>
     <color name="purple_start">#391A8D</color>
+    <color name="gray">#424243</color>
+
+    <color name="green">#009F00</color>
+    <color name="yellow">#FFA200</color>
+    <color name="red">#B10000</color>
+
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#FF8325</color>
+
+    <color name="yellow_theme">#FF9800</color>
 </resources>
