--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="view_margin">20dp</dimen>
+    <dimen name="view_margin">5dp</dimen>
     <dimen name="big_text">20sp</dimen>
+    <dimen name="small_text">10sp</dimen>
+    <dimen name="medium_text">12sp</dimen>
+    <dimen name="detail_padding">10sp</dimen>
 </resources>
