--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="tv_header_style">
+    <style name="general_tv_style">
         <item name="android:layout_margin">@dimen/view_margin</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/big_text</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="tv_header_style" parent="@style/general_tv_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/big_text</item>
+    </style>
+
+    <style name="tv_medium_style">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">@dimen/medium_text</item>
+    </style>
+
+    <style name="tv_small_style" parent="@style/general_tv_style">
+        <item name="android:textSize">@dimen/small_text</item>
+    </style>
+
+    <style name="tv_medium_game_item">
+        <item name="android:textSize">@dimen/medium_text</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
