--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="center_color">#021639</color>
     <color name="end_color">#052C70</color>
     <color name="purple_start">#391A8D</color>
-    <color name="gray">#424243</color>
+    <color name="gray">#A2A2A6</color>
 
     <color name="green">#009F00</color>
     <color name="yellow">#FFA200</color>
