--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/btn_nav_home"
-        android:title="Home"
+        android:title="@string/home"
         android:icon="@drawable/baseline_videogame_asset_24"/>
     <item android:id="@+id/btn_nav_library"
-        android:title="Library"
+        android:title="@string/library"
         android:icon="@drawable/baseline_library_books_24"/>
 </menu>
