--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="big_text">20sp</dimen>
     <dimen name="small_text">10sp</dimen>
     <dimen name="medium_text">12sp</dimen>
-    <dimen name="detail_padding">10sp</dimen>
+    <dimen name="detail_padding">10dp</dimen>
+    <dimen name="image_corner">20dp</dimen>
+    <dimen name="card_margin">20dp</dimen>
 </resources>
