--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.view.GameDetailActivity"
+    tools:context=".presentation.view.homeview.GameDetailActivity"
     android:background="@color/dark_background">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/detail_padding" >
-
         <ImageView
             android:id="@+id/iv_game_image"
             android:layout_width="300dp"
@@ -32,7 +33,7 @@
             android:id="@+id/tv_desc_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/overview"
+            android:text="@string/overview_title"
             style="@style/tv_header_style"
             app:layout_constraintTop_toBottomOf="@id/tv_game_title"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -51,7 +52,7 @@
             android:id="@+id/tv_game_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/overview"
+            tools:text="@string/overview_title"
             style="@style/tv_small_style"
             app:layout_constraintTop_toBottomOf="@id/tv_desc_title"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -99,6 +100,7 @@
             android:text="@string/released_date_title"
             style="@style/tv_medium_style"
             app:layout_constraintTop_toBottomOf="@id/tv_game_genre"
+            app:layout_constraintTop_toTopOf="@id/tv_developer_title"
             app:layout_constraintStart_toStartOf="parent" />
         <TextView
             android:id="@+id/tv_game_released_date"
@@ -115,6 +117,7 @@
             android:layout_height="wrap_content"
             android:text="@string/age_rating_title"
             style="@style/tv_medium_style"
+            app:layout_constraintTop_toTopOf="@id/tv_publisher_title"
             app:layout_constraintTop_toBottomOf="@id/tv_game_released_date"
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
@@ -142,6 +145,23 @@
             tools:text="developers"
             app:layout_constraintTop_toBottomOf="@id/tv_developer_title"
             app:layout_constraintStart_toStartOf="@id/tv_developer_title"/>
+
+        <TextView
+            android:id="@+id/tv_publisher_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/publisher_title"
+            style="@style/tv_medium_style"
+            app:layout_constraintTop_toBottomOf="@id/tv_game_developer"
+            app:layout_constraintStart_toStartOf="@id/tv_platform_title"/>
+        <TextView
+            android:id="@+id/tv_game_publisher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/tv_small_style"
+            tools:text="publishers"
+            app:layout_constraintTop_toBottomOf="@id/tv_publisher_title"
+            app:layout_constraintStart_toStartOf="@id/tv_publisher_title"/>
         <TextView
             android:id="@+id/tv_screenshot_title"
             android:layout_width="wrap_content"
@@ -151,19 +171,14 @@
             app:layout_constraintTop_toBottomOf="@id/tv_game_age_rating"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <!--<com.smarteist.autoimageslider.SliderView
-            android:id="@+id/sv_show_backdrop"
-            android:layout_width="match_parent"
-            android:layout_height="360dp"
-            app:sliderIndicatorEnabled="false"
-            app:sliderAnimationDuration="600"
-            app:sliderAutoCycleDirection="back_and_forth"
-            app:sliderAutoCycleEnabled="true"
-            app:sliderScrollTimeInSec="4"
-            app:sliderStartAutoCycle="true"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_image_slider"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
             app:layout_constraintTop_toBottomOf="@id/tv_screenshot_title"
+            app:layout_constraintBottom_toTopOf="@id/tv_trailer_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>-->
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/tv_trailer_title"
@@ -171,28 +186,58 @@
             android:layout_height="wrap_content"
             android:text="@string/trailer_title"
             style="@style/tv_header_style"
-            app:layout_constraintTop_toBottomOf="@id/tv_screenshot_title"
+            app:layout_constraintTop_toBottomOf="@id/vp_image_slider"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-            android:id="@+id/trailer_video"
+        <TextView
+            android:id="@+id/tv_store_title"
+            style="@style/tv_header_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/store_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_trailer_title"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list_store"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_store_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/tv_tag_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tags_title"
-            style="@style/tv_medium_game_item"
-            app:layout_constraintTop_toBottomOf="@id/trailer_video"
+            style="@style/tv_medium_style"
+            app:layout_constraintTop_toBottomOf="@id/rv_list_store"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/tv_game_tags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/tv_small_style"
+            tools:text="tags"
+            app:layout_constraintTop_toBottomOf="@id/tv_tag_title"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <TextView
+            android:id="@+id/tv_dlc_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dlc_title"
+            style="@style/tv_medium_style"
+            app:layout_constraintTop_toBottomOf="@id/tv_game_tags"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list_dlc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_dlc_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
