--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/btn_nav_home"
         android:title="@string/home"
         android:icon="@drawable/baseline_videogame_asset_24"/>
+    <item android:id="@+id/btn_nav_store"
+        android:title="@string/stores"
+        android:icon="@drawable/baseline_storefront_24"/>
     <item android:id="@+id/btn_nav_library"
         android:title="@string/library"
         android:icon="@drawable/baseline_library_books_24"/>
