--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="item_color">#232832</color>
     <color name="dark_background">#28384b</color>
+    <color name="item_store_color">#07AFF4</color>
 
     <color name="center_color">#021639</color>
     <color name="end_color">#052C70</color>
@@ -11,6 +12,10 @@
     <color name="green">#009F00</color>
     <color name="yellow">#FFA200</color>
     <color name="red">#B10000</color>
+
+    <color name="blue">#0674D5</color>
+
+    <color name="orange">#FF8922</color>
 
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
