--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -24,4 +24,25 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="search_bar_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/search_bar_design</item>
+        <item name="android:hint">@string/search</item>
+        <item name="android:layout_margin">@dimen/view_margin</item>
+    </style>
+
+    <style name="rounded_image">
+        <item name="cornerSize">@dimen/image_corner</item>
+    </style>
+
+    <style name="shapeable_image_view_style">
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:alpha">0.6</item>
+    </style>
+
+    <style name="upper_corner_rounded_image">
+        <item name="cornerSizeTopLeft">@dimen/image_corner</item>
+        <item name="cornerSizeTopRight">@dimen/image_corner</item>
+    </style>
 </resources>
