--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:text="@string/platform_title"
             style="@style/tv_medium_style"
-            app:layout_constraintTop_toBottomOf="@id/tv_game_desc"
+            app:layout_constraintTop_toTopOf="@id/tv_genre_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_genre_title"/>
         <TextView
@@ -178,6 +178,8 @@
             android:id="@+id/vp_image_slider"
             android:layout_width="300dp"
             android:layout_height="200dp"
+            android:clipToPadding="false"
+            android:clipChildren="false"
             app:layout_constraintTop_toBottomOf="@id/tv_screenshot_title"
             app:layout_constraintBottom_toTopOf="@id/tv_trailer_title"
             app:layout_constraintStart_toStartOf="parent"
