--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,6 +17,7 @@
 
     <style name="tv_small_style" parent="@style/general_tv_style">
         <item name="android:textSize">@dimen/small_text</item>
+        <item name="android:layout_margin">@dimen/view_margin</item>
     </style>
 
     <style name="tv_medium_game_item">
