--- a/app/src/main/res/layout/fragment_home_2.xml
+++ b/app/src/main/res/layout/fragment_home_2.xml
@@ -6,7 +6,7 @@
     android:background="@color/dark_background">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_title_popular"
             android:layout_width="wrap_content"
