--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -31,14 +31,6 @@
             style="@style/tv_header_style"
             app:layout_constraintTop_toBottomOf="@id/iv_game_image"
             app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:id="@+id/tv_desc_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/overview_title"
-            style="@style/tv_header_style"
-            app:layout_constraintTop_toBottomOf="@id/tv_game_title"
-            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/tv_metacritic"
@@ -46,9 +38,31 @@
             android:layout_height="wrap_content"
             tools:text="5.4"
             android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_game_title"
+            android:layout_margin="@dimen/view_margin"/>
+
+        <TextView
+            android:id="@+id/tv_desc_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/overview_title"
+            style="@style/tv_header_style"
+            app:layout_constraintTop_toBottomOf="@id/tv_metacritic"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_library"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_add_library_design"
+            android:text="@string/add_to_library"
+            android:drawableStart="@drawable/baseline_library_add_24"
+            android:textSize="@dimen/small_text"
+            android:padding="@dimen/detail_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_game_image"
-            android:layout_margin="@dimen/view_margin"/>
+            />
 
         <TextView
             android:id="@+id/tv_game_desc"
@@ -70,7 +84,7 @@
 
         <TextView
             android:id="@+id/tv_game_genre"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
             tools:text="genres"
@@ -85,13 +99,14 @@
             style="@style/tv_medium_style"
             app:layout_constraintTop_toTopOf="@id/tv_genre_title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_genre_title"/>
+            app:layout_constraintStart_toEndOf="@id/tv_genre_title"/>
         <TextView
             android:id="@+id/tv_game_platform"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
             tools:text="platforms"
+            android:layout_margin="0dp"
             app:layout_constraintTop_toBottomOf="@id/tv_platform_title"
             app:layout_constraintStart_toStartOf="@id/tv_platform_title"/>
 
@@ -106,7 +121,7 @@
             app:layout_constraintStart_toStartOf="parent" />
         <TextView
             android:id="@+id/tv_game_released_date"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
             tools:text="released date"
@@ -124,7 +139,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/tv_game_age_rating"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
             tools:text="age rating"
@@ -137,13 +152,15 @@
             android:layout_height="wrap_content"
             android:text="@string/developer_title"
             style="@style/tv_medium_style"
+            android:layout_margin="0dp"
             app:layout_constraintTop_toBottomOf="@id/tv_game_platform"
             app:layout_constraintStart_toStartOf="@id/tv_platform_title"/>
         <TextView
             android:id="@+id/tv_game_developer"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
+            android:layout_margin="0dp"
             tools:text="developers"
             app:layout_constraintTop_toBottomOf="@id/tv_developer_title"
             app:layout_constraintStart_toStartOf="@id/tv_developer_title"/>
@@ -154,13 +171,15 @@
             android:layout_height="wrap_content"
             android:text="@string/publisher_title"
             style="@style/tv_medium_style"
+            android:layout_margin="0dp"
             app:layout_constraintTop_toBottomOf="@id/tv_game_developer"
             app:layout_constraintStart_toStartOf="@id/tv_platform_title"/>
         <TextView
             android:id="@+id/tv_game_publisher"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             style="@style/tv_small_style"
+            android:layout_margin="0dp"
             tools:text="publishers"
             app:layout_constraintTop_toBottomOf="@id/tv_publisher_title"
             app:layout_constraintStart_toStartOf="@id/tv_publisher_title"/>
@@ -194,6 +213,16 @@
             app:layout_constraintTop_toBottomOf="@id/vp_image_slider"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_video_preview_slider"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:clipToPadding="false"
+            android:clipChildren="false"
+            app:layout_constraintTop_toBottomOf="@id/tv_trailer_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <TextView
             android:id="@+id/tv_store_title"
             style="@style/tv_header_style"
@@ -201,7 +230,7 @@
             android:layout_height="wrap_content"
             android:text="@string/store_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_trailer_title"/>
+            app:layout_constraintTop_toBottomOf="@id/vp_video_preview_slider"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_list_store"
             android:layout_width="match_parent"
