--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -75,6 +75,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_library_add_24"
         android:backgroundTint="@color/gray"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:layout_constraintStart_toStartOf="@id/tv_genres"
