--- a/app/src/main/res/menu/custom_detail_toolbar.xml
+++ b/app/src/main/res/menu/custom_detail_toolbar.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/btn_back_menu"
         android:title="@string/back"
         android:icon="@drawable/baseline_arrow_back_24"/>
+    <item android:id="@+id/btn_refresh"
+        android:title="@string/refresh"
+        android:icon="@drawable/baseline_refresh_24"
+        app:showAsAction="collapseActionView"
+        />
 </menu>
