--- a/app/src/main/res/layout/card_image_dialog.xml
+++ b/app/src/main/res/layout/card_image_dialog.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_preview_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        app:shapeAppearanceOverlay="@style/rounded_image"
+        tools:src="@drawable/appicon"
         tools:ignore="ContentDescription"/>
 
 </androidx.cardview.widget.CardView>
