--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    android:id="@+id/tv_item"
+<TextView android:id="@+id/tv_item_spinner"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/spinner_design"/>
+    android:textColor="@color/white"
+    tools:text="test"
+    android:padding="@dimen/view_margin"
+    android:background="@drawable/spinner_design"
+    xmlns:tools="http://schemas.android.com/tools" />
