--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="230dp"
+    android:layout_width="match_parent"
     android:layout_height="400dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +10,7 @@
     android:paddingBottom="@dimen/detail_padding">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_poster"
-        android:layout_width="230dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="fitXY"
         app:shapeAppearanceOverlay="@style/upper_corner_rounded_image"
