--- a/app/src/main/res/drawable/spinner_mode.xml
+++ b/app/src/main/res/drawable/spinner_mode.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:drawable="@drawable/baseline_keyboard_arrow_up_24"/>
-    <item android:state_enabled="false" android:drawable="@drawable/baseline_keyboard_arrow_down_24"/>
+    <item><layer-list>
+        <item>
+            <shape>
+                <solid android:color="@color/item_color"/>
+                <stroke android:color="@color/orange" android:width="1dp"/>
+            </shape>
+        </item>
+        <item android:state_enabled="true" android:gravity="right" android:drawable="@drawable/quantum_ic_keyboard_arrow_down_white_36"/>
+    </layer-list></item>
 </selector>
