--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,8 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/view_margin"
-        android:background="@drawable/spinner_design"
+        style="@style/spinner_style"
+        android:spinnerMode="dropdown"
         app:layout_constraintEnd_toStartOf="@+id/sp_platform"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +33,8 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/view_margin"
-        android:background="@drawable/spinner_design"
+        style="@style/spinner_style"
+        android:spinnerMode="dropdown"
         app:layout_constraintEnd_toStartOf="@+id/sp_genre"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/sp_order_by"
@@ -44,11 +46,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/search_view"
         android:layout_margin="@dimen/view_margin"
-        android:background="@drawable/spinner_design"
+        style="@style/spinner_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/sp_platform"
         app:layout_constraintTop_toBottomOf="@id/search_view"
+        android:spinnerMode="dropdown"
         tools:text="genre" />
 
     <TextView
