--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -26,6 +26,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_poster"
         tools:text="Title"
+        android:maxLines="1"
+        android:ellipsize="marquee"
         style="@style/tv_header_style" />
     <TextView
         android:id="@+id/tv_ratings"
@@ -66,6 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/genre_genrenya"
+        android:maxLines="1"
+        android:ellipsize="end"
         style="@style/tv_medium_game_item"
         app:layout_constraintTop_toBottomOf="@id/tv_released_date"
         app:layout_constraintStart_toStartOf="@id/tv_released_date" />
